重构项目结构并添加 Zoom 会议链接输入功能
- 将项目转换为 monorepo 结构，分离 client 和 server
- 更新 package.json 以支持工作空间和新的脚本命令
- 改进 .env.example 配置，添加更多环境变量说明
- 更新 README.MD，提供详细的项目说明和使用指南
- 重构前端 Zoom 会议加入逻辑，支持动态输入会议链接
- 升级 Zoom Web SDK 到最新版本
- 优化 URL 解析和错误处理机制

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,17 @@
+# 服务器配置
+PORT=30015
+NODE_ENV=development
+
+# Zoom SDK 凭证
+# 从 Zoom 开发者门户获取: https://marketplace.zoom.us/
+ZOOM_SDK_KEY=your_zoom_sdk_key
+ZOOM_SDK_SECRET=your_zoom_sdk_secret
+
+# React 应用配置
+# 注意: React 环境变量必须以 REACT_APP_ 开头
+REACT_APP_ZOOM_SDK_KEY=your_zoom_sdk_key
+REACT_APP_API_URL=http://localhost:30015/api
+
 # Zoom Webhook Secret Token:
 ZOOM_WEBHOOK_SECRET_TOKEN_EX=ZOOM_WEBHOOK_SECRET_TOKEN_HERE
 
